@@ -9,7 +9,7 @@
  * See the file "COPYING" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * @(#) $Id: dump-xml.c,v 1.21 2001/04/18 13:04:48 strauss Exp $
+ * @(#) $Id: dump-xml.c,v 1.22 2001/11/08 07:37:31 schoenw Exp $
  */
 
 /*
@@ -38,6 +38,11 @@
 #define  INDENTVALUE	20   /* column to start values, except multiline */
 #define  INDENTTEXTS	4    /* column to start multiline texts */
 #define  INDENTMAX	64   /* max column to fill, break lines otherwise */
+
+
+
+static int disableschema  = 0;
+static int disabledoctype = 0;
 
 
 
@@ -962,13 +967,20 @@ static void dumpXml(int modc, SmiModule **modv, int flags, char *output)
     for (i = 0; i < modc; i++) {
 	
 	fprint(f, "<?xml version=\"1.0\"?>\n");
-	fprint(f, "<!DOCTYPE smi SYSTEM \"smi.dtd\">\n");
+	if (!disabledoctype) {
+	    fprint(f, "<!DOCTYPE smi SYSTEM \"http://www.ibr.cs.tu-bs.de/projects/nmrg/smi.dtd\">\n");
+	}
 	fprint(f, "\n");
 	fprint(f, "<!-- This module has been generated by smidump "
 	       SMI_VERSION_STRING ". Do not edit. -->\n");
 	fprint(f, "\n");
-	
-	fprint(f, "<smi xmlns:smi=\"http://www.irtf.org/nmrg/\">\n");
+
+	if (!disableschema) {
+	    fprint(f, "<smi xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"\n");
+	    fprint(f, "     xsi:noNamespaceSchemaLocation=\"http://www.ibr.cs.tu-bs.de/projects/nmrg/smi.xsd\">\n");
+	} else {
+	    fprint(f, "<smi>\n");
+	}
 	
 	fprintModule(f, modv[i]);
 	fprintImports(f, modv[i]);
@@ -991,13 +1003,21 @@ static void dumpXml(int modc, SmiModule **modv, int flags, char *output)
 void initXml()
 {
     
+    static SmidumpDriverOption opt[] = {
+	{ "no-schema", OPT_FLAG, &disableschema, 0,
+	  "disable XML Schema spec in the toplevel element"},
+	{ "no-doctype", OPT_FLAG, &disabledoctype, 0,
+	  "disable DOCTYPE spec in the XML prolog"},
+        { 0, OPT_END, 0, 0 }
+    };
+
     static SmidumpDriver driver = {
 	"xml",
 	dumpXml,
 	0,
 	SMIDUMP_DRIVER_CANT_UNITE,
 	"intermediate SMI XML exchange format",
-	NULL,
+	opt,
 	NULL
     };
     
